--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -1,2 +1,48 @@
-<h1>Schedules#index</h1>
-<p>Find me in app/views/schedules/index.html.erb</p>
+<h1>スケジュール情報一覧</h1>
+<br>
+<% if flash[:notice] %>
+  <p class="notice"><%= flash[:notice] %></p>
+<% end %>
+<br>
+<h1>スケジュール合計：<%= @schedules.count %></h1>
+
+<br>
+
+<table>
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>タイトル</th>
+      <th>開始日</th>
+      <th>終了日</th>
+      <th>終日</th>
+      <th>更新日</th>
+      <th>情報</th>
+      <th>編集</th>
+      <th>削除</th>
+    </tr>
+  </thead>
+ 
+  <tbody>
+    <% @schedules.each do |schedule| %>
+      <tr>
+        <td><%= schedule.id %></td>
+        <td><%= schedule.title %></td>
+        <td><%= schedule.start_date.strftime("%Y年 %m月 %d日") if schedule.start_date %></td>
+        <td><%= schedule.end_date.strftime("%Y年 %m月 %d日") if schedule.end_date %></td>
+        <td>
+          <% if schedule.all_day == "1" %>
+            <p>◯</p>
+          <% else schedule.all_day == "0" %>
+            <p></p>
+          <% end %>
+        </td>
+        <td><%= schedule.updated_at.to_s(:datetime_jp) %></td>
+        <td><%= link_to "情報", schedule %></td>
+        <td><%= link_to "編集", [:edit, schedule] %></td>
+        <td><%= link_to "削除", schedule, method: :delete, data: { confirm: "スケジュールを削除しますか？" } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<p><%= link_to "スケジュール新規登録", :new_schedule %></p>
